# pyiron_workflow_vasp

./: .gitignore  .pyiron_vasp_config.example  CHANGELOG.md  README.md  generate_vasp_pyiron_config.md  generic.py  pyproject.toml  vasp.py
.ci_support/: environment.yml  lower-bound.yml
.github/workflows/: push-pull.yml  release.yml
docs/design/plans/: 2026-05-12-vasp-engine.md
docs/design/specs/: 2026-05-12-vasp-engine-design.md
example_notebooks/: QuickStart.ipynb
examples/: run_bulk_fe.py
pyiron_workflow_vasp/: __init__.py  _run.py  _version.py  engine.py  generic.py  vasp.py
pyiron_workflow_vasp/vasp_parser/: __init__.py  output.py
pyiron_workflow_vasp/vasp_resources/: vasp_pseudopotential_GGA_MPRelaxSet_data.csv  vasp_pseudopotential_GGA_MatPES_data.csv
tests/: conftest.py  test_smoke.py
tests/fixtures/: README.md  generate.py
tests/unit/: test_engine_conformance.py  test_engine_isif_mapping.py  test_engine_knobs.py  test_engine_shape.py  test_numerical_regression.py  test_run_vasp.py
vasp_parser/: output.py
