[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyiron_workflow_vasp"
version = "0.1.0"
description = "A VASP workflow integration package for pyiron"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "pyiron Team", email = "pyiron@mpie.de" }
]
keywords = ["pyiron", "vasp", "workflow", "dft", "materials-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy==1.26.4",
    "pandas==3.0.2",
    "matplotlib==3.10.9",
    "ase==3.28.0",
    "scipy==1.17.1",
    "pyiron-workflow==0.15.6",
    "pyiron-workflow-atomistics==0.0.5",
    "pyiron_vasp==0.2.5",
    "pymatgen==2026.5.4",
    "pyiron_snippets==1.2.1",
    "scikit-learn==1.8.0",
    "tqdm==4.67.3",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "nbformat",
    "nbclient",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "ruff>=0.5",
]
notebook = [
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/pyiron/pyiron_workflow_vasp"
Documentation = "https://github.com/pyiron/pyiron_workflow_vasp"
Repository = "https://github.com/pyiron/pyiron_workflow_vasp.git"
"Bug Tracker" = "https://github.com/pyiron/pyiron_workflow_vasp/issues"

[tool.hatch.build.targets.wheel]
packages = ["pyiron_workflow_vasp"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=pyiron_workflow_vasp"
testpaths = [
    "tests",
]
